<resources>
    <string name="app_name">GMAKERS</string>
    <string name="sign_id">아이디를 입력해주세요</string>
    <string name="sign_pw">비밀번호를 입력해주세요</string>
    <string name="do_login">로그인</string>
    <string name="not_sign">회원이 아니신가요?</string>
    <string name="do_sign">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="gmakers">G-MAKERS</string>
    <string name="sign">가입하기</string>
    <string name="check_password">비밀번호 확인하기</string>
    <string name="pw_detail">8자~20자 영문, 숫자로 입력해주세요</string>
    <string name="different_password">비밀번호가 다릅니다</string>
    <string name="search_summoner">소환사 검색</string>
    <string name="authorize_account">계정 인증하기</string>
    <string name="authorize_account_desc">본인 계정을 인증하고 나만의 프로필을 만들어 보세요.</string>
    <string name="unverifired">UNVERIFIED</string>
    <string name="prefer_champion">선호 챔피언</string>
    <string name="authorize_account_2">계정 인증</string>
    <string name="authorize_account_desc_2">1.소환사 아이콘을 제시된 이미지로 변경해주세요.</string>
    <string name="refresh">새로고침</string>
    <string name="other_summoner_icon">다른 소환사 아이콘</string>
    <string name="changed">변경했습니다.</string>
    <string name="confirming">확인 중...</string>
    <string name="auth_fail_msg">입력 값이 올바르지 않습니다. 다시 한 번 확인해 주세요.</string>
    <string name="auth_success_msg">2.계정 인증이 완료되었습니다.</string>
    <string name="ok">완료</string>
    <string name="search">검색</string>
    <string name="search_not_found">검색 결과가 없습니다. 정확히 입력해 주세요.</string>
    <string name="profile_basicInfo">프로필 기본정보</string>
    <string name="want_intro">성향 기워드</string>
    <string name="position_intro">포지션</string>
    <string name="first_check">1순위</string>
    <string name="second_check">2순위</string>
    <string name="finish">완료</string>
    <string name="show_lank">표시 할 랭크</string>
    <string name="basic_info">기본 설정</string>
    <string name="edit_basic_info">기본 정보 수정</string>
    <string name="change_info">항목 변경</string>
    <string name="change_order">순서 변경</string>
    <string name="other_info">추가 정보</string>
    <string name="want_champion">선호 챔피언</string>
    <string name="go_degisn">디자인</string>
    <string name="change_theme">테마 변경</string>
    <string name="edit_profile">프로필 편집</string>
    <string name="make_profile">프로필 생성</string>
    <string name="basic_info_lang">1. 기본 정보를 입력해 주세요</string>
    <string name="finish_edit">프로필 생성이 완료되었습니다!</string>
    <string name="start_custom">계정 인증을 인증하고 커스터마이징 해보세요!</string>
    <string name="next_certification">다음에 하기</string>
    <string name="start_certification">계정 인증하기</string>
    <string name="champion_name">소환사명</string>
    <string name="simple_intro">간단소개</string>
    <string name="keyword1">망나니</string>
    <string name="keyword2">스플릿</string>
    <string name="keyword3">탱커</string>
    <string name="keyword4">갱킹</string>
    <string name="keyword5">오브젝트 지향</string>
    <string name="keyword6">로밍</string>
    <string name="keyword7">암살자</string>
    <string name="keyword8">성장형</string>
    <string name="keyword9">유틸형</string>
    <string name="keyword10">전투민족</string>
    <string name="keyword11">한타지향</string>
    <string name="position1">TOP</string>
    <string name="position2">JUNGLE</string>
    <string name="position3">MID</string>
    <string name="position4">AD</string>
    <string name="position5">SUP</string>
    <string name="RANKED_SOLO">RANKED_SOLO</string>
    <string name="RANKED_FLEX">RANKED_FLEX</string>
    <string name="NONE">NONE</string>
    <string name="change_image">2. 소환사 아이콘을 제시된 이미지로 변경해주세요.</string>
    <string name="next">다음</string>
    <string name="choice_champio">선호하는 챔피언을</string>
    <string name="choice_all">선택해 주세요</string>
    <string name="be_readying">준비중입니다</string>
</resources>