<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/title_ll"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/back_grey9_24dp"
                android:scaleType="centerInside"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="14dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_ll"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            style="@style/display3"
            android:textColor="@color/gray9"
            android:text="@string/authorize_account_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_ll"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="126dp"
            android:layout_marginLeft="20dp"
            style="@style/subhead2"
            android:textColor="@color/gray6"
            android:text="@string/authorize_account_desc_2"/>

        <ImageView
            android:id="@+id/profile_icon_iv"
            android:layout_width="220dp"
            android:layout_height="220dp"
            app:layout_constraintTop_toBottomOf="@id/title_ll"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="170dp"/>

        <TextView
            android:id="@+id/refresh_tv"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/profile_icon_iv"
            app:layout_constraintRight_toRightOf="@id/profile_icon_iv"
            style="@style/body1"
            android:textColor="@color/primary_dark"
            android:text="@string/refresh"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/refresh_tv"
            app:layout_constraintTop_toTopOf="@id/refresh_tv"
            app:layout_constraintBottom_toBottomOf="@id/refresh_tv"
            android:layout_marginRight="4dp"
            style="@style/body1"
            android:textColor="@color/gray9"
            android:text="@string/other_summoner_icon"/>

        <TextView
            android:id="@+id/fail_msg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profile_icon_iv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="42dp"
            style="@style/subhead2"
            android:textColor="@color/secondary_red"
            android:text="@string/auth_fail_msg"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/change_tv"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:background="@drawable/background_shape_radius_4dp"
            android:backgroundTint="@color/primary"
            style="@style/subhead2"
            android:textColor="@color/white"
            android:text="@string/changed"/>

        <TextView
            android:id="@+id/confirming_tv"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:background="@drawable/background_shape_radius_4dp"
            android:backgroundTint="#336540E9"
            style="@style/subhead2"
            android:textColor="@color/white"
            android:text="@string/confirming"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/success_ll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/title_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="84dp"
                android:layout_marginLeft="20dp"
                style="@style/subhead2"
                android:textColor="@color/gray6"
                android:text="@string/auth_success_msg"/>

            <com.example.gmakers_android.widget.ProfileCardView
                android:id="@+id/profile_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="128dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/ok_tv"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:background="@drawable/background_shape_radius_4dp"
                android:backgroundTint="@color/primary"
                style="@style/subhead2"
                android:textColor="@color/white"
                android:text="@string/ok"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>