<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.gmakers_android.feature.profile.viewmodel.PickChampionViewModel"
            />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.profile.ui.PickChampionActivity">


        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="34dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/intro_title"
            android:layout_width="190dp"
            android:layout_height="74dp"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/notosans_bold"
            android:gravity="center"
            android:text="@string/make_profile"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintHorizontal_bias="0.178"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_img" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_title"
            app:srcCompat="@drawable/edit_step" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="34dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="34dp" />

        <TextView
            android:id="@+id/change_image_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/change_image"
            android:fontFamily="@font/notosans_bold"
            android:textColor="@color/gray5"
            app:layout_constraintStart_toStartOf="@+id/guideline14"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finish_btn"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/shape_purple_1"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pickChampion_rc"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_image_tv"
            app:layout_constraintBottom_toTopOf="@id/finish_btn"
            tools:listitem="@layout/item_champion" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>